# discord-bot

./: .gitignore  Cargo.toml  README.md
src/: application.json  main.rs
src/commands/: apex.rs  mod.rs
