[package]
authors = ["Maple#4100"]
name = "discord-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1.0.130", features = ["derive"] }
serde_json = "^1.0.67"
reqwest = { version = "0.11.4", features = ["json"] }
tokio = { version = "1.6.0", features = ["macros", "rt-multi-thread", "full"] }
serenity = { version = "0.10.9", features = [
    "framework",
    "standard_framework",
] }